--- a/package.json
+++ b/package.json
@@ -18,12 +18,13 @@
     "express-jwt": "^3.0.1",
     "jade": "~1.6.0",
     "jsonwebtoken": "^5.0.2",
-    "mongoose": "^4.0.0",
+    "mongoose": "^5.7.0",
     "morgan": "~1.3.0",
     "passport": "^0.2.2",
     "passport-local": "^1.0.0",
     "request": "~2.51.0",
     "serve-favicon": "~2.1.3",
-    "uglify-js": "~2.4.15"
+    "uglify-js": "~2.4.15",
+    "geolib": "~3.2.1"
   }
 }
