--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "passport": "^0.4.0",
     "passport-local": "^1.0.0",
     "serve-favicon": "~2.5.0",
-    "uglify-js": "~2.8.0"
+    "uglify-js": "~2.8.0",
+    "helmet": "^4.1.0"
   }
 }
